# turn_by_turn

./: .buildinfo  .gitignore  .zenodo.json  CHANGELOG.md  LICENSE  README.md  data.json  environment.pickle  genindex.html  index.doctree  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: README.md  coverage.yml  cron.yml  documentation.yml  publish.yml  tests.yml
_modules/: collections.html  index.html
_modules/turn_by_turn/: ascii.html  constants.html  doros.html  esrf.html  io.html  iota.html  lhc.html  madng.html  psb.html  ptc.html  sps.html  structures.html  superkekb.html  trackone.html  utils.html  xtrack_line.html
_modules/turn_by_turn/readers/: esrf.html  iota.html  lhc.html  ptc.html  trackone.html
_modules/turn_by_turn/xtrack/: _multi_element_monitor.html  _particle_monitors.html  _particles_monitor.html  converter.html
_sources/: index.rst.txt
_sources/converters/: index.rst.txt
_sources/modules/: index.rst.txt
_sources/readers/: index.rst.txt
converters/: index.doctree  index.html
doc/: conf.py  index.rst
doc/converters/: index.rst
doc/modules/: index.rst
doc/readers/: index.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_419d82e8f4a02e52___init___py.html  z_419d82e8f4a02e52_ascii_py.html  z_419d82e8f4a02e52_constants_py.html  z_419d82e8f4a02e52_doros_py.html  z_419d82e8f4a02e52_errors_py.html  z_419d82e8f4a02e52_esrf_py.html  z_419d82e8f4a02e52_io_py.html  z_419d82e8f4a02e52_iota_py.html  z_419d82e8f4a02e52_lhc_py.html  z_419d82e8f4a02e52_madng_py.html  z_419d82e8f4a02e52_psb_py.html  z_419d82e8f4a02e52_ptc_py.html  z_419d82e8f4a02e52_sps_py.html  z_419d82e8f4a02e52_structures_py.html  z_419d82e8f4a02e52_superkekb_py.html  z_419d82e8f4a02e52_trackone_py.html  z_419d82e8f4a02e52_utils_py.html  z_419d82e8f4a02e52_xtrack_line_py.html  z_e4c91c46144d8786___init___py.html  z_e4c91c46144d8786__multi_element_monitor_py.html  z_e4c91c46144d8786__particle_monitors_py.html  z_e4c91c46144d8786__particles_monitor_py.html  z_e4c91c46144d8786_converter_py.html
modules/: index.doctree  index.html
readers/: index.doctree  index.html
tests/: conftest.py  test_doros.py  test_iota.py  test_leir.py  test_lhc_and_general.py  test_madng.py  test_psb.py  test_ptc_trackone.py  test_sps.py  test_superkekb.py  test_tbt.py  test_utils.py  test_xtrack.py
tests/inputs/: doros_shrink_data.py  test_doros.h5  test_doros_2024-09-29.h5  test_leir.sdds  test_trackone  test_trackone_no_date  test_wrong_ptc
tests/inputs/madng/: fodo.seq  fodo_track.mad  fodo_track.tfs  fodo_track_error.tfs
turn_by_turn/: __init__.py  ascii.py  constants.py  doros.py  errors.py  esrf.py  io.py  iota.py  leir.py  lhc.py  madng.py  psb.py  ptc.py  sps.py  structures.py  superkekb.py  tbt_data.py  trackone.py  utils.py  xtrack.py  xtrack_line.py
turn_by_turn/readers/: esrf.py  iota.py  lhc.py  ptc.py  trackone.py
turn_by_turn/xtrack/: __init__.py  _multi_element_monitor.py  _particle_monitors.py  _particles_monitor.py  converter.py
turn_by_turn/xtrack_helpers/: __init__.py  multi_element_monitor.py  particle_monitors.py
