[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "turn_by_turn/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/doc",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["turn_by_turn"]

[project]
name = "turn_by_turn"
readme = "README.md"
description = "Read and write turn-by-turn measurement files from different particle accelerator formats."
authors = [
    {name = "OMC Team", email = "pylhc@github.com"},  # see zenodo file / commits for details
]
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "numpy >= 1.24",
    "scipy >= 1.5",
    "pandas >= 2.1",
    "sdds >= 0.4",
    "h5py >= 2.9",
]

[project.optional-dependencies]
madng = [
    "tfs-pandas >= 4.0.0",   # for reading MAD-NG files (Could do everything in memory with just pandas)
]

xtrack = [
    "xtrack >= 0.84.7",      # for xtrack
    "setuptools >= 65",      # for xtrack
    "xpart >= 0.23.0",       # for xtrack
]

test = [
    "pytest>=7.0",
    "pytest-cov>=2.9",
    "turn_by_turn[madng]",
    "turn_by_turn[xtrack]",
]

doc = [
    "sphinx >= 7.0",
    "sphinx_rtd_theme >= 2.0",
]

all = [
    "turn_by_turn[test]",
    "turn_by_turn[doc]",
    "turn_by_turn[madng]",
    "turn_by_turn[xtrack]",
]

[project.urls]
homepage = "https://github.com/pylhc/turn_by_turn"
repository = "https://github.com/pylhc/turn_by_turn"
documentation = "https://pylhc.github.io/turn_by_turn/"
# changelog = "https://github.com/pylhc/turn_by_turn/blob/master/CHANGELOG.md"
